# cmdlib

./: .flake8  .gitignore  LICENSE  Makefile  README.md  cmdlib.py  mypy.ini  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yml
cmdlib/: __init__.py  command.py
scripts/: fix-mypy-root-pth.sh  install-poetry.sh
src/cmdlib/: __init__.py  py.typed
tests/: test_cmdlib.py
