[tool.poetry]
name = "cmdlib"
version = "0.3.0"
description = ""
authors = ["Xavier Martinez-Hidalgo <xavier@martinezhidalgo.org>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
