[tool.poetry]
name = "cmdlib"
version = "0.4.0"
description = ""
authors = ["Xavier Martinez-Hidalgo <xavier@martinezhidalgo.org>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
flake8-black = "*"
mypy = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
