[tool.poetry]
name = "cmdlib"
version = "0.8.0"
description = ""
authors = ["Xavier Martinez-Hidalgo <xavier@martinezhidalgo.org>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest-cov = "*"
ruff = "0.6.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
